dnl Process this file with autoconf to produce a configure script.
dnl Copyright 2008, 2009  Jochen Voss

AC_INIT(wisent, 0.6.2, voss@seehuhn.de, [], [http://seehuhn.de/pages/wisent])
AM_INIT_AUTOMAKE

dnl Python support - require Python 3.6 or later
AM_PATH_PYTHON([3.6])

AC_CONFIG_FILES([Makefile doc/Makefile examples/Makefile examples/css/Makefile])
AC_OUTPUT
